@@ -24,6 +24,10 @@ endif::[]
 
 [float]
 ===== Breaking changes
+* Ordering of configuration sources has slightly changed, please review <<configuration>>:
+** `elasticapm.properties` file now has higher priority over java system properties and environment variables, +
+This change allows to change dynamic options values at runtime by editing file, previously values set in java properties
+or environment variables could not be overriden, even if they were dynamic.
 
 [float]
 ===== Features
@@ -42,6 +46,7 @@ Note that changing these values at runtime can slow down the application tempora
 * When JAX-RS-annotated method delegates to another JAX-RS-annotated method, transaction name should include method A - {pull}1062[#1062]
 * Fixed bug that prevented an APM Error from being created when calling `org.slf4j.Logger#error` - {pull}1049[#1049]
 * Wrong address in JDBC spans for Oracle, MySQL and MariaDB when multiple hosts are configured - {pull}1082[#1082]
+* Document and re-order configuration priorities {pull}1087[#1087]
 
 [float]
 ===== Potentially breaking changes
